--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Sencilla aplicación API utilizando express-js con MongoDB",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "swagger": "tsoa spec",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "dev": "concurrently \"npx tsc --watch\" \"npm run swagger\" \"nodemon -q dist/index.js\"",
     "test": "jest",
-    "server:coverage": "npm run test && cd coverage/lcov-report && npx serve"
+    "server:coverage": "npm run test && cd coverage/lcov-report && npx serve",
+    "build": "npx webpack --mode development",
+    "build:prod": "npx webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -31,13 +33,19 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "helmet": "^6.0.1"
+    "helmet": "^6.0.1",
+    "mongoose": "^6.8.3",
+    "swagger-jsdoc": "^6.2.7",
+    "swagger-ui-express": "^4.6.0",
+    "tsoa": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "concurrently": "^7.6.0",
     "eslint": "^8.31.0",
@@ -50,6 +58,7 @@
     "serve": "^14.1.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
